@@ -1,5 +1,5 @@
 import os
-from Acquisition import aq_base
+from Acquisition import aq_base, aq_inner
 from Globals import InitializeClass
 from AccessControl import ClassSecurityInfo
 from Products.PageTemplates.PageTemplateFile import PageTemplateFile
@@ -185,20 +185,19 @@ class ControllerBase:
 
 
     def getNext(self, controller_state, REQUEST):
-        __traceback_info__ = str(controller_state).split('\n')
-        
         id = self.getId()
         status = controller_state.getStatus()
         context = controller_state.getContext()
+        context_base = aq_base(context)
 
-        context_type = getattr(context, 'portal_type', None)
+        context_type = getattr(context_base, 'portal_type', None)
         if context_type is None:
-            context_type = getattr(context, '__class__', None)
+            context_type = getattr(context_base, '__class__', None)
             if context_type:
                 context_type = getattr(context_type, '__name__', None)
 
         button = controller_state.getButton()
-        controller = getToolByName(self, 'portal_form_controller')
+        controller = getToolByName(aq_inner(self), 'portal_form_controller')
 
         next_action = None
         try:
@@ -207,7 +206,7 @@ class ControllerBase:
             pass
         if next_action is None:
             try:
-                if hasattr(aq_base(context), 'formcontroller_actions'):
+                if getattr(context_base, 'formcontroller_actions', None) is not None:
                     next_action = context.formcontroller_actions.match(id, status, context_type, button)
             except ValueError:
                 pass
@@ -252,8 +251,6 @@ class ControllerBase:
 
 
     def getValidators(self, controller_state, REQUEST):
-        __traceback_info__ = str(controller_state).split('\n')
-        
         controller = getToolByName(self, 'portal_form_controller')
         context = controller_state.getContext()
         context_type = controller._getTypeName(context)
